# SuperCap_SUEP

./: .clang-format  .clangd  .gdbinit  .gitignore  .mxproject  CLAUDE.md  GEMINI.md  Makefile  README.md  RM2025-PowerControlBoard.ioc  openocd.cfg  stm32g474rbtx_flash.ld  stm32g474rbtx_ramf.ld
Core/Inc/: Calibration.hpp  Communication.hpp  Config.hpp  Interface.hpp  PowerManager.hpp  Utility.hpp  adc.h  comp.h  hrtim.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Core/Src/: Communication.cpp  Interface.cpp  PowerManager.cpp  UserTask.cpp  Utility.cpp  adc.c  comp.c  dac.c  dma.c  fdcan.c  gpio.c  hrtim.c  main.c  opamp.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c
Upper/: README.md  debugger.py
Upper/SDK/C++/arm/: README.md
Upper/SDK/C++/win/: CMakeLists.txt
Upper/SDK/C++/win/include/protocol/: damiao.h  usb_class.h
Upper/SDK/C++/win/src/: dev_sn.cpp
Upper/SDK/Python/: damiao.py
sdk/: README.md
sdk/include/: supercap_sdk.h
sdk/src/: supercap_sdk.c
src/: supercap_sdk.c
tools/: README.md  calibrate.py
tools/upper/: Cargo.toml  build.rs  slcan_monitor.py
tools/upper/canSDK/: README.md
tools/upper/canSDK/src/: c_wrapper.cpp  c_wrapper.h  main.cpp
tools/upper/canSDK/src/protocol/: damiao.cpp
tools/upper/src/: main.rs
tools/upper_old/: can_manager.py  can_sdk_adapter.py  debugger.py
